--- a/public/researches.html
+++ b/public/researches.html
@@ -1,15 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ManabeLab</title>
-</head>
-<body>
-  <script type="text/javascript">
-    window.location.href = '/study';
-  </script>
-  <p>このページのリンクは変更されました。</p>
-  <p>自動的に遷移されない場合は、<a href="/study">こちら</a>をクリックしてください。</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ManabeLab</title>
+  </head>
+  <body>
+    <script type="text/javascript">
+      window.location.href = "/profile/research/";
+    </script>
+    <p>このページのリンクは変更されました。</p>
+    <p>
+      自動的に遷移されない場合は、<a href="/profile/research/">こちら</a
+      >をクリックしてください。
+    </p>
+  </body>
 </html>
